1.3.2, fix width overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@ App MAIN Component Styling | YouTube Abbreviated | Unit 4 Assessment
 
 
 .App {
+  position: relative;
+
   display: grid;
-  grid-template-columns: 100vw;
+  grid-template-columns: 100%;
   grid-template-rows: 72px auto;
 
   font-family: 'Open Sans', sans-serif;
