--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,6 +11,9 @@ ul.nav-bar {
   justify-content: flex-start;
   align-items: center;
 
+  position: fixed;
+  width: auto;
+
   background-color: #000;
 }
 
